Fix gap copy-pasta

--- a/packages/kiwi-react/src/bricks/DropdownMenu.css
+++ b/packages/kiwi-react/src/bricks/DropdownMenu.css
@@ -14,7 +14,7 @@
 
 		display: flex;
 		flex-direction: column;
-		gap: var(--_kiwi-button-gap);
+		gap: var(--_kiwi-dropdown-menu-gap);
 
 		border-radius: 5px;
 		padding-block: var(--_kiwi-dropdown-menu-padding);
